# taskbook

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml  overlay.nix
.github/workflows/: release.yml
crates/taskbook-client/: Cargo.toml
crates/taskbook-client/src/: commands.rs  config.rs  main.rs  render.rs  taskbook.rs
crates/taskbook-client/src/mcp/: mod.rs  tools.rs
crates/taskbook-client/src/tui/: actions.rs  app.rs  command_parser.rs  event.rs
crates/taskbook-client/src/tui/widgets/: item_row.rs
crates/taskbook-common/: Cargo.toml
crates/taskbook-common/src/: board.rs  due.rs  lib.rs
crates/taskbook-common/src/models/: task.rs
crates/taskbook-server/: Cargo.toml
crates/taskbook-server/src/: middleware.rs
crates/taskbook-server/src/handlers/: user.rs
docs/: README.md  configuration.md  server.md  sync.md
docs/superpowers/plans/: 2026-06-12-due-dates-and-mcp-server.md
docs/superpowers/specs/: 2026-06-12-due-dates-and-mcp-server-design.md
