[package]
name = "taskbook-client"
version = "1.3.4"
edition = "2021"
rust-version = "1.75"
description = "Tasks, boards & notes for the command-line habitat"
license = "MIT"
repository = "https://github.com/klaussinani/taskbook"
keywords = ["cli", "task", "todo", "board", "note"]
categories = ["command-line-utilities"]

[dependencies]
taskbook-common = { path = "../taskbook-common" }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
colored = "3"
dirs = "6"
chrono = "0.4"
arboard = "3"
uuid = { version = "1", features = ["v4"] }
thiserror = "2"
ratatui = "0.30"
crossterm = "0.29"
reqwest = { version = "0.13", default-features = false, features = ["json", "blocking", "rustls"] }
base64 = "0.22"
tokio = { version = "1", features = ["rt-multi-thread"] }
rpassword = "7"
fs2 = "0.4"
unicode-width = "0.2"

[[bin]]
name = "tb"
path = "src/main.rs"
